--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@types/request": "^2.48.3",
     "config": "^3.2.2",
     "express": "^4.17.1",
+    "mysql2": "^1.7.0",
     "request": "^2.88.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "ws": "^7.0.1"
   },
   "devDependencies": {
