--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "start_server.js",
   "scripts": {
     "start": "node dist/start_bot.js",
-    "dev": "nodemon src/start_bot.ts",
+    "dev": "nodemon start_server.js",
     "build": "tsc -p ."
   },
   "repository": {
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "mysql2": "^1.7.0",
     "request": "^2.88.0",
+    "socket.io": "^2.3.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "ws": "^7.0.1"
